src/components/Header/header.scss
@import '../../sass/global';

.header {
  @include flex-box(
    $direction: row,
    $justify-content: space-between,
    $align-items: center
  );

  height: to-rem(96);
  line-height: 1.5;
  margin: auto;
  max-width: $max-page-width;
  padding: 0 $spacer-l;
  width: 100%;

  .logo {
    @include flex-box(
      $direction: row,
      $justify-content: center,
      $align-items: center
    );

    gap: $spacer-xxxs;

    &__image {
      width: to-rem(38);
    }

    &__text {
      color: $header-clr;
      font-size: $paragraph-l;
      font-weight: 700;
    }
  }

  .navlinks {
    @include reset-list-style;
    @include flex-box(
      $direction: row,
      $justify-content: center,
      $align-items: center
    );

    gap: $spacer-xxs;

    &__academies {
      @include flex-box(
        $direction: column,
        $justify-content: center,
        $align-items: center
      );
    }

    &__academies-menu {
      background-color: $header-bg-clr;
      border: 0;
      font-family: $paragraph-font;
      padding: 0;
    }

    &__academies-arrow {
      margin-left: to-rem(7);
      width: to-rem(14);
    }

    &__academies-dropdown {
      position: absolute;
      top: to-rem(78);
    }

    &__academies-menu:hover {
      cursor: pointer;
    }

    &__link,
    &__academies-menu {
      color: $header-clr;
      font-size: $paragraph-l;
      line-height: inherit;
      text-decoration: none;
    }
  }
}

